--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,6 @@
         <ul class="downloads">
           <li><a href="{{ site.docs.pdf_url }}">Download <strong>PDF</strong></a></li>
           <li><a href="{{ site.docs.doc_url }}">Download <strong>DOC</strong></a></li>
-          <li><a href="{{ site.docs.odt_url }}">Download <strong>ODT</strong></a></li>
         </ul>
         {% endif %}
       </header>
@@ -38,8 +37,7 @@
 
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a
-              href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Vaia Chouchouli's Digital CV</small></p>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
